# Banshee

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE.md  Doxyfile  README.md  TODO.md  conan_provider.cmake  conandata.yml
Resources/Shaders/: basic.frag  basic.vert
Samples/ModelViewer/: CMakeLists.txt  CameraController.cpp  CameraController.h  main.cpp
Sources/: CMakeLists.txt
Sources/Banshee/: CMakeLists.txt
Sources/Banshee/Assets/: AssetManager.cpp  AssetManager.ixx  ModelManager.cpp  ModelManager.ixx  Resource.ixx  ResourceManager.ixx  ShaderManager.cpp  ShaderManager.ixx  TextureManager.cpp  TextureManager.ixx
Sources/Banshee/Components/: Camera.cpp  Camera.ixx  Component.ixx  Model.cpp  Model.ixx  StaticMesh.cpp  StaticMesh.ixx  Transform.cpp  Transform.ixx
Sources/Banshee/Core/: Application.cpp  Application.ixx  InputManager.cpp  InputManager.ixx  Window.cpp
Sources/Banshee/World/: Entity.ixx  Interfaces.ixx  Level.ixx  World.cpp  World.ixx
Sources/Banshee/include/Banshee/: Banshee.hpp
Sources/Banshee/include/Banshee/Assets/: AssetManager.h  AssetManager.hpp  AssetManager.ixx  ModelManager.h  ModelManager.hpp  ModelManager.ixx  Resource.h  Resource.ixx  ResourceManager.hpp  ShaderManager.hpp  TextureManager.h  TextureManager.hpp  TextureManager.ixx
Sources/Banshee/include/Banshee/Components/: Camera.h  Camera.hpp  Component.hpp  ComponentBase.hpp  Model.h  Model.hpp  Model.ixx  StaticMesh.h  StaticMesh.hpp  StaticMesh.ixx  Transform.h  Transform.hpp
Sources/Banshee/include/Banshee/Core/: Application.h  Application.hpp  Application.ixx  Core.h  InputManager.h  InputManager.hpp  Level.h  Level.ixx  Window.h  Window.hpp  Window.ixx
Sources/Banshee/include/Banshee/World/: Entity.hpp  Level.hpp  World.hpp
Sources/Banshee/src/Assets/: ModelManager.cpp  ShaderManager.cpp  TextureManager.cpp
Sources/Banshee/src/Banshee/Assets/: AssetManager.cpp  ModelManager.cpp  TextureManager.cpp
Sources/Banshee/src/Banshee/Components/: Camera.cpp  Model.cpp  StaticMesh.cpp  Transform.cpp
Sources/Banshee/src/Banshee/Core/: Application.cpp  InputManager.cpp  Window.cpp
Sources/Banshee/src/Components/: Camera.cpp  Model.cpp  StaticMesh.cpp  Transform.cpp
Sources/Banshee/src/Core/: Application.cpp  InputManager.cpp  Window.cpp
Sources/Banshee/src/World/: Level.cpp  World.cpp
Sources/GSL/: CMakeLists.txt
Sources/GSL/include/GSL/: Logger.h  Types.h
Sources/GSL/src/GSL/: Logger.cpp
Sources/Poltergeist/: CMakeLists.txt  Container.ixx  Filesystem.ixx  Memory.ixx  Poltergeist.ixx  README.md  String.ixx  Types.ixx
Sources/Poltergeist/Logger/: Logger.cpp  Logger.ixx
Sources/Poltergeist/Memory/: Memory.cpp  Memory.ixx
Sources/Poltergeist/Profiler/: Profiler.cpp  Profiler.hpp
Sources/Poltergeist/include/Poltergeist/: Container.h  Container.hpp  Logger.h  Memory.h  Memory.ixx  Poltergeist.h  Poltergeist.hpp  String.h  Types.h
Sources/Poltergeist/include/Poltergeist/Logger/: Logger.hpp
Sources/Poltergeist/include/Poltergeist/Math/: Math.hpp
Sources/Poltergeist/include/Poltergeist/Memory/: Memory.hpp
Sources/Poltergeist/src/Logger/: Logger.cpp
Sources/Poltergeist/src/Math/: Math.cpp
Sources/Poltergeist/src/Poltergeist/: Logger.cpp
Sources/Poltergeist/src/Profiler/: Profiler.cpp
Sources/Spectre/: CMakeLists.txt  GraphicBuffer.cpp  README.md  Renderbuffer.ixx  Renderer.cpp  Spectre.ixx
Sources/Spectre/Buffer/: Buffer.cpp  Buffer.ixx
Sources/Spectre/Framebuffer/: Framebuffer.cpp  Framebuffer.ixx
Sources/Spectre/Renderbuffer/: Renderbuffer.cpp  Renderbuffer.ixx
Sources/Spectre/Renderer/: Renderer.cpp  Renderer.ixx
Sources/Spectre/Shader/: Shader.cpp  Shader.ixx
Sources/Spectre/Texture/: Texture.cpp  Texture.ixx
Sources/Spectre/VertexArray/: VertexArray.cpp  VertexArray.ixx
Sources/Spectre/include/Spectre/: Framebuffer.h  Framebuffer.ixx  GraphicBuffer.h  GraphicBuffer.ixx  Renderbuffer.h  Renderer.h  Renderer.ixx  Shader.h  Spectre.hpp  Spectre.ixx  Texture.h  Texture.ixx  Vertex.ixx  VertexArray.h  VertexArray.ixx
Sources/Spectre/include/Spectre/Buffer/: Buffer.hpp
Sources/Spectre/include/Spectre/Framebuffer/: Framebuffer.hpp
Sources/Spectre/include/Spectre/Renderbuffer/: Renderbuffer.hpp
Sources/Spectre/include/Spectre/Renderer/: Renderer.hpp
Sources/Spectre/include/Spectre/Shader/: Shader.hpp
Sources/Spectre/include/Spectre/Texture/: Texture.hpp
Sources/Spectre/include/Spectre/Vertex/: Vertex.hpp
Sources/Spectre/include/Spectre/VertexArray/: VertexArray.hpp
Sources/Spectre/src/Buffer/: Buffer.cpp
Sources/Spectre/src/Framebuffer/: Framebuffer.cpp
Sources/Spectre/src/Renderbuffer/: Renderbuffer.cpp
Sources/Spectre/src/Renderer/: Renderer.cpp
Sources/Spectre/src/Shader/: Shader.cpp
Sources/Spectre/src/Spectre/: Framebuffer.cpp  GraphicBuffer.cpp  Renderbuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp
Sources/Spectre/src/Texture/: Texture.cpp
Sources/Spectre/src/VertexArray/: VertexArray.cpp
resources/models/: plane.glb
resources/shaders/: basic.frag  basic.vert
src/: main.cpp
src/Banshee/: CMakeLists.txt  main.cpp
src/Banshee/Assets/: AssetManager.cpp  AssetManager.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  Resource.h  TextureLoader.cpp  TextureLoader.h  TextureManager.cpp  TextureManager.h
src/Banshee/Components/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  StaticMesh.cpp  StaticMesh.h  Transform.cpp  Transform.h
src/Banshee/Core/: Application.cpp  Application.h  Core.h  InputManager.cpp  InputManager.h  Level.h  Logger.cpp  Logger.h  Scene.h  Window.cpp  Window.h
src/Banshee/Graphics/: Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  GraphicBuffer.cpp  GraphicBuffer.h  Renderbuffer.cpp  Renderbuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h
src/Engine/: main.cpp
src/GSL/: CMakeLists.txt  Container.h  GSL.h  Logger.cpp  Memory.h  README.md
src/Spectre/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  GraphicBuffer.cpp  README.md  (+12 more)
(+34 files in other folders)
