if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    if (MSVC)
        add_compile_options(/W4 /Wall /Zi /Zf /MDd)
    else ()
        add_compile_options(-Wall -Wextra -pedantic -g -O0)
    endif ()
elseif (CMAKE_BUILD_TYPE STREQUAL "Release")
    if (MSVC)
        add_compile_options(/O2)
    else ()
        add_compile_options(-O2)
    endif ()
endif ()

add_subdirectory(Poltergeist)
add_subdirectory(Spectre)
add_subdirectory(Banshee)
